<resources>
    <string name="app_name">ARSHOP</string>
    <string name="repeat_password">تکرار کلمه عبور</string>
    <string name="error">خطا</string>
    <string name="ok">باشه</string>
    <string name="cancel">لغو</string>
    <string name="enter_phone_number">لطفا شماره تلفن خود را وارد کنید</string>
    <string name="continue_btn">ادامه</string>
    <string name="enter_password">لطفا رمز ورود خود را وارد نمایید</string>
    <string name="modelDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages
        , and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


    <!--buttons-->
    <string name="login_or_signup">ورود یا ثبت نام</string>
    <string name="continue_payment">ادامه فرایند خرید</string>
    <string name="pay">پرداخت</string>
    <string name="clear_cart">حذف سبد خرید</string>
    <string name="login">ورود</string>
    <string name="clear_orders">حذف سفارش‌ها</string>
    <string name="ar_page">صفحه واقعیت افزوده</string>
    <string name="wishlist">لیست مورد علاقه‌ها</string>
    <string name="addresses">آدرس‌ها</string>
    <string name="contact_us">با ما در تماس باشید</string>
    <string name="privacy_policies">قوانین حریم خصوصی</string>
    <string name="comments">نقد و نظرات</string>
    <string name="comment">دیدگاه کاربر</string>
    <string name="user_account_info">اطلاعات حساب کاربری</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="recieve_and_verify_code">ادامه و دریافت کد تایید</string>
    <string name="confirm">تایید</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="home">خانه</string>
    <string name="categories">دسته بندی ها</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">صفحه شخصی</string>
    <string name="delete_model">حذف</string>
    <string name="purchase">خرید</string>
    <string name="increase_balance">افزایش موجودی</string>
    <string name="change_pass">تغییر رمز عبور</string>
    <string name="add_new_address">افزودن آدرس جدید</string>


    <!--textView texts-->
    <string name="sample_number">1</string>
    <string name="time_info">زمان</string>
    <string name="date_info">تاریخ</string>
    <string name="user_rating">امتیاز کاربر برای محصول:</string>
    <string name="anonymous_user_comment">ارسال دیدگاه به صورت ناشناس</string>
    <string name="product_rating">امتیاز محصول</string>
    <string name="sample_gateway">درگاه پرداخت</string>
    <string name="choose_payment_method">انتخاب نوع پرداخت</string>
    <string name="choose_payment_gateway">انتخاب درگاه پرداخت</string>
    <string name="online_payment">پرداخت اینترنتی</string>
    <string name="charge_payment">پرداخت اعتباری</string>
    <string name="in_person_payment">پرداخت درب منزل</string>
    <string name="sample_text">متن نمونه</string>
    <string name="timing_info">زمان ارسال</string>
    <string name="address">آدرس</string>
    <string name="send_time_info">شیوه و زمان ارسال</string>
    <string name="sending_info">شیوه ارسال</string>
    <string name="change_address">تغییر آدرس</string>
    <string name="title">عنوان</string>
    <string name="empty_list">موردی برای نمایش وجود ندارد!</string>
    <string name="product">محصول</string>
    <string name="price">قیمت</string>
    <string name="toman">تومان</string>
    <string name="category">دسته‌بندی</string>
    <string name="empty_cart">سبد خرید شما خالی است.</string>
    <string name="total">مجموع</string>
    <string name="sample_price">1234</string>
    <string name="welcome">خوش آمدید!</string>
    <string name="forget_pass_hint">آیا کلمه عبور خود را فراموش کرده اید؟</string>
    <string name="privacy_policy">قوانین حریم خصوصی</string>
    <string name="create_acc_link">ایجاد حساب کاربری جدید</string>
    <string name="empty_orders">شما تاکنون سفارشی ثبت نکرده‌اید!</string>
    <string name="name">نام</string>
    <string name="lname">نام خانوادگی</string>
    <string name="reciever_name">نام و نام‌خانوادگی گیرنده</string>
    <string name="brand">سازنده محصول</string>
    <string name="description">توضیحات</string>
    <string name="product_attributes">ویژگی‌های محصول</string>
    <string name="search">جستجو</string>
    <string name="search_in_shop">جستجو در ARSHOP</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="password">کلمه عبور</string>
    <string name="sample_phone_number">01234567889</string>
    <string name="email">ایمیل</string>
    <string name="sample_email">example@sample.com</string>
    <string name="register">ثبت نام کنید!</string>
    <string name="enter_verify_code">لطفا کد تایید ارسال‌شده را وارد کنید</string>
    <string name="send_code_again">ارسال مجدد کد</string>
    <string name="model_name">نام مدل</string>
    <string name="model_details">ویژگی‌های مدل</string>
    <string name="view_all">مشاهده همه</string>
    <string name="user_comments">نظرات کاربران</string>
    <string name="sample_comments_count">۳ نظر</string>
    <string name="send_comment">ثبت دیدگاه</string>
    <string name="add_to_wishlist">افزودن به موردعلاقه‌ها</string>
    <string name="sample_count">1</string>
    <string name="sample_comment">خیلی خوبه راضیم ازتون آفرین</string>
    <string name="account_balance">موجودی حساب</string>
    <string name="national_id">کد ملی</string>
    <string name="NID_sample">1092233886</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="birth_date_sample">10/10/1301</string>
    <string name="card_number">شماره کارت</string>
    <string name="card_number_sample">1234-1234-1234-1234</string>
    <string name="default_acc_balance">0</string>
    <string name="save_changes">ذخیره تغییرات</string>
    <string name="cancel_changes">انصراف</string>
    <string name="edit_account_info_text">ویرایش اصلاعات حساب کاربری</string>
    <string name="previous_pass">رمز عبور قبلی</string>
    <string name="repeat_new_pass">تکرار رمز عبور جدید</string>
    <string name="new_pass">رمز عبور جدید</string>
    <string name="edit_pass">ویرایش رمز عبور</string>
    <string name="amount_rial">مبلغ (ریال)</string>
    <string name="enter_bank_portal">ورود به درگاه بانک</string>
    <string name="charge_account">شارژ حساب کاربری</string>
    <string name="profile_info">اطلاعات حساب کاربری</string>
    <string name="payment_info">اطلاعات پرداخت</string>
    <string name="province">استان</string>
    <string name="city">شهر</string>
    <string name="national_code">کد ملی</string>
    <string name="home_address">آدرس منزل</string>
    <string name="plaque">پلاک</string>
    <string name="apartment_number">واحد</string>
    <string name="postal_code">کد پستی</string>
    <string name="self_recieve">گیرنده سفارش خودم هستم</string>
    <string name="default_address">آدرس پیش‌فرض</string>
    <string name="special_events">مناسبت‌های ویژه</string>
    <string name="shop_products">محصولات فروشگاه</string>


    <!-- DialogBoxManager's strings -->
    <string name="dialog_positive_button">باشه</string>
    <string name="success_message">عملیات با موفقیت انجام شد</string>
    <string name="error_title">خطا!</string>
    <string name="error_message">عملیات دچار مشکل شده است</string>
    <string name="caution_message">هشدار</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
