<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        android:id="@+id/layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textDirection="rtl"
            android:layoutDirection="rtl">

        <TextView
                android:id="@+id/ar_model_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorBackground"
                android:text="@string/model_name"
                android:textAlignment="textStart"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/ar_model_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorBackground"
                android:text="@string/sample_price"
                android:textAlignment="textStart"
                android:textSize="15sp" />


        <TextView
                android:id="@+id/ar_model_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorSecondary"
                android:background="@color/colorBackground"
                android:text="@string/model_details"
                android:textAlignment="textStart"
                android:textSize="18sp" />


        <TextView
                android:id="@+id/ar_model_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorSecondary"
                android:background="@color/colorBackground"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textSize="15sp"/>

        <Button
                android:id="@+id/purchase_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textColor="@color/colorBackground"
                android:layout_marginBottom="10dp"
                android:background="@drawable/large_rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/purchase"/>


        <Button
                android:id="@+id/delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorBackground"
                android:background="@drawable/large_rounded_corners"
                android:backgroundTint="@color/colorError"
                android:text="@string/delete_model" />

    </LinearLayout>



</androidx.cardview.widget.CardView>

