<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorBackground"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        tools:context=".views.fragments.EditProfileInfoFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            android:translationZ="20dp"
            app:title="@string/edit_account_info_text"
            android:backgroundTint="@color/colorBackground"
            android:background="@drawable/small_rounded_corners"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/profile_edit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5">

        <Button
                android:id="@+id/save_changes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="4"
                android:background="@drawable/medium_rounded_corners"
                android:backgroundTint="@color/colorBackground"
                android:text="@string/save_changes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:elevation="8dp"/>

        <Button
                android:id="@+id/cancel_changes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/medium_rounded_corners"
                android:backgroundTint="@color/colorBackground"
                android:text="@string/cancel_changes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:elevation="8dp"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/profile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_last_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@drawable/cursor"
                        android:cursorVisible="true"
                        android:hint="@string/name"
                        android:text="@string/name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@drawable/cursor"
                        android:cursorVisible="true"
                        android:hint="@string/phone_number"
                        android:text="@string/sample_phone_number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@drawable/cursor"
                        android:cursorVisible="true"
                        android:hint="@string/email"
                        android:text="@string/sample_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/NID_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@drawable/cursor"
                        android:cursorVisible="true"
                        android:hint="@string/national_id"
                        android:text="@string/NID_sample"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birth_date_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:inputType="date"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@drawable/cursor"
                        android:cursorVisible="true"
                        android:hint="@string/birth_date"
                        android:text="@string/birth_date_sample"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_number_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@drawable/cursor"
                        android:cursorVisible="true"
                        android:hint="@string/card_number"
                        android:text="@string/card_number_sample"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>